[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/ezgif.com-gif-maker (10).png" type="Texture" id=1]
[ext_resource path="res://Flame_spirit.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="CircleShape2D" id=2]

[node name="Flame_spirit" type="Sprite"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
vframes = 5
hframes = 5
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]
visible = false
scale = Vector2( 12, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
